plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

// Java 버전 설정 (Toolchain을 사용하여 JDK 20으로 설정)
java {
    // toolchain {
    //     languageVersion = JavaLanguageVersion.of(20)
    // }
    // sourceCompatibility와 targetCompatibility는 toolchain에 의해 설정될 수 있지만,
    // 명시적으로 설정하여 호환성을 보장하는 것이 좋습니다.
    sourceCompatibility = JavaVersion.VERSION_20
    targetCompatibility = JavaVersion.VERSION_20
}


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// Thymeleaf 설정
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	// modelmapper
	implementation 'org.modelmapper:modelmapper:3.1.1'

	// gson
	implementation 'com.google.code.gson:gson:2.10.1'
    
    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// Querydsl 설정
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// spring security test
	testImplementation 'org.springframework.security:spring-security-test'
	// spring security thymeleaf
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	// OAuth2 Client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	// Lombok  설정
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

// Lombok 테스트용 설정(TEST코드에 사용할 수 있게 포함)
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

// Querydsl 설정 추가
def generated = 'src/main/generated'

// sourceSets에 생성된 Q-Type 클래스 경로 추가
sourceSets {
	main.java.srcDirs += [ generated ]
}

// gradle clean 시 생성된 Q-Type 클래스 삭제
clean {
	delete file(generated)
}


tasks.named('test') {
	useJUnitPlatform()
}
